# TurtleBot3-Autonomous-Navigation-ROS2-SLAM-Nav2-Perception-Gazebo-

./: .gitignore  README.md  click_to_grid.py  path_to_nav2_follower.py  show_map_with_axes.py  visualize_marked_cells.py
src/: coco.names
src/SLAM_Map/: Map.rviz  Map_pathplanning.rviz  my_map.pgm  my_map.yaml
src/astarplanner/: package.xml  setup.py
src/astarplanner/astarplanner/: astar_planner.py
src/astarplanner/resource/: astarplanner
src/my_robot/: CMakeLists.txt  package.xml
src/my_robot/launch/: robot_gazebo.launch  robot_gazebo.launch.py
src/my_robot/resource/: robot.urdf
src/my_robot/src/: main.py  obstacle_detector.py  path_planner.py  robot_controller.py
src/my_robot/worlds/: my_world.world
src/ros2_ws/src/object_detection/: setup.py
src/ros2_ws/src/object_detection/launch/: object_detection.launch.py
src/ros2_ws/src/object_detection/object_detection/: object_detection.py
src/ros2_ws/src/yolo_world_ros/: package.xml  setup.py
src/turtlebot3_ws/config/: slam_config.rviz
